<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sites Watch</string>

    <!-- LABELS -->
    <string name="labelCreateAccount">Não possui uma conta?</string>
    <string name="labelSiteNotifyVia">Ser notificado por</string>
    <string name="labelSiteReceiveAndroidNotification">Android</string>
    <string name="labelSiteOptions">Verificações</string>
    <string name="labelSitePingOption">Ping</string>

    <!-- MENUS -->
    <string name="menuItemTitleLogout">Sair</string>
    <string name="menuItemTitleSiteAdd">Adicionar Site</string>
    <string name="menuItemTitleRefreshList">Atualizar</string>
    <string name="menuItemMainContextEdit">Editar</string>
    <string name="menuItemMainContextRemove">Remover</string>

    <!-- BUTTONS -->
    <string name="btnCreateAccount" >Criar</string>
    <string name="btnLogin" >Logar</string>
    <string name="btnRegister" >Cadastrar</string>
    <string name="btnSiteCreate" >Cadastrar</string>
    <string name="btnSiteUpdate" >Atualizar</string>

    <!-- PLACEHOLDERS -->
    <string name="hintEmail">E-mail</string>
    <string name="hintPwd">Senha</string>
    <string name="hintRePwd">Confirmar senha</string>
    <string name="hintSiteName">Nome</string>
    <string name="hintSiteEndereco">Url/Ip</string>

    <!-- PROGRESS DIALOGS -->
    <string name="dialogTitleRegisterUser">Aguarde...</string>
    <string name="dialogBodyRegisterUser">Seu cadastro está sendo finalizado</string>
    <string name="dialogTitleAuthUser">Aguarde...</string>
    <string name="dialogBodyAuthUser">Seu login está sendo finalizado</string>
    <string name="dialogTitleSiteList">Aguarde...</string>
    <string name="dialogBodySiteList">Conectando-se com o servidor</string>
    <string name="dialogTitleSiteAdd">Aguarde...</string>
    <string name="dialogBodySiteAdd">Site sendo adicionado</string>
    <string name="dialogTitleSiteUpdate">Aguarde...</string>
    <string name="dialogBodySiteUpdate">Site sendo atualizado</string>
    <string name="dialogTitleSiteDelete">Aguarde...</string>
    <string name="dialogBodySiteDelete">Site sendo deletado</string>

    <!-- FEEDBACK -->
    <string name="fbAlertEmptyEmail">E-mail deve ser válido</string>
    <string name="fbAlertEmptyPwd">Senha não deve ser vazia</string>
    <string name="fbAlertNotEqualPwd">Senhas devem coincidir</string>
    <string name="fbAlertRegisteredSuccessfully">Cadastrado com sucesso</string>
    <string name="fbAlertFailLogin">Seu login falhou. Aguarde um momento e tente mais tarde</string>
    <string name="fbAlertSiteAddedSuccessfully">Site adicionado com sucesso</string>
    <string name="fbAlertSiteDeletedSuccessfully">Site deletado com sucesso</string>
    <string name="fbAlertEmptySiteName">Nome não pode ser vazio!</string>
    <string name="fbAlertEmptySiteEndereco">Um endereço válido (url/ip) deve ser passado!</string>
    <string name="fbDialogErrorTitleUserRegistration">Falhou!</string>
    <string name="fbDialogErrorBodyUserRegistration">Verifique a sua conexão com a internet</string>
    <string name="fbDialogErrorPositiveButtonUserRegistration">OK</string>
    <string name="fbDialogErrorTitleUserAuthentication">Falhou!</string>
    <string name="fbDialogErrorBodyUserAuthentication">Verifique a sua conexão com a internet</string>
    <string name="fbDialogErrorPositiveButtonUserAuthentication">OK</string>
    <string name="fbDialogErrorTitleUserLogin">Falhou!</string>
    <string name="fbDialogErrorBodyUserLogin">Seu login falhou. Aguarde um momento e tente mais tarde</string>
    <string name="fbDialogErrorPositiveButtonUserLogin">OK</string>
    <string name="fbDialogErrorTitleSiteAdd">Falhou!</string>
    <string name="fbDialogErrorBodySiteAdd">Não foi possível adicionar o site. Verifique a sua conexão com a internet!</string>
    <string name="fbDialogErrorPositiveButtonSiteAdd">OK</string>
    <string name="fbDialogErrorTitleSiteUpdate">Falhou!</string>
    <string name="fbDialogErrorBodySiteUpdate">Não foi possível atualizar o site. Verifique a sua conexão com a internet!</string>
    <string name="fbDialogErrorPositiveButtonSiteUpdate">OK</string>
    <string name="fbDialogErrorTitleSiteList">Falhou!</string>
    <string name="fbDialogErrorBodySiteList">Não foi possível se conectar com o servidor. Verifique a sua conexão com a internet!</string>
    <string name="fbDialogErrorPositiveButtonSiteList">Tentar Novamente</string>
    <string name="fbDialogErrorTitleSiteDelete">Falhou!</string>
    <string name="fbDialogErrorBodySiteDelete">Não foi possível deletar o site. Verifique a sua conexão com a internet!</string>
    <string name="fbDialogErrorPositiveButtonSiteDelete">OK</string>

</resources>