<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/gradiente_principal"
        >


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            />

    <EditText
            android:id="@+id/editTextNomeSite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Nome"
            />

    <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Site Url"
            android:inputType="textUri"
            />

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_marginTop="20dp"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelSiteOptions"
            android:textSize="18sp"
            />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelSitePingOption"
                android:textSize="17sp"
                />

        <CheckBox
                android:id="@+id/checkBoxOptPing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

    </LinearLayout>

    <Button
            android:id="@+id/button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnSiteCreate"
            />

</LinearLayout>